--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Base-Case</title>
+    <style>a {text-decoration: none; color: red; } a:hover {cursor: pointer}</style>
 </head>
 
 <body>
